installing sbt